# mats2025-application

./: README.md  pyproject.toml
checkpoints/: mess3_bs=1000_ntrain=60000000.th
mats2025_application/: data.py  experiment_utils.py  utils.py
notebooks/: demo.ipynb
tb_logs/: events.out.tfevents.1745026834.Mac.attlocal.net.86289.0
