[tool.poetry]
name = "mats2025-application"
version = "0.1.0"
description = ""
authors = ["Stephen Chen <stephen.chen@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.12"
torch = "^2.6.0"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
pyyaml = "^6.0.2"
jaxtyping = "^0.3.1"
scipy = "^1.15.2"
transformer-lens = "^2.15.0"
tqdm = "^4.67.1"
tensorboard = "^2.19.0"
scikit-learn = "^1.6.1"
tb-nightly = "^2.20.0a20250418"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
